--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <!-- Font Awesome Stylesheet -->
   <link href="https://kit-pro.fontawesome.com/releases/v5.15.3/css/pro.min.css" rel="stylesheet"
     class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">
+
+  <!-- Custom Stylesheet -->
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -54,9 +58,11 @@
         </div>
       </div>
     </nav>
+
     <!-- End Navigation Menu -->
 
     <!-- start Product Slider Section -->
+
     <section class="container mt-5 rounded-3" style="background-color: #FCEAE8;">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -69,7 +75,6 @@
                 <button type="button" class="btn border">Buy Now</button>
               </div>
               <div class="col-lg-5">
-
                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="Product">
               </div>
             </div>
@@ -92,7 +97,8 @@
             <div class="row d-flex align-items-center ps-4">
               <div class="col-lg-7">
                 <h1>X-Box for your living room</h1>
-                <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                </p>
                 <h1>$600</h1>
                 <button type="button" class="btn border">Buy Now</button>
               </div>
@@ -116,10 +122,136 @@
     </section>
 
     <!-- End Slider Section -->
+
+    <!-- Start Categories Section -->
+
+    <section class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-4 col-sm-6">
+          <div class="d-flex p-3 bg-warning rounded-3 justify-content-between align-items-center">
+            <h2 class="text-white">Watch</h2>
+            <img src="images/categories/watch.png" alt="" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="d-flex p-3 light-pink rounded-3 justify-content-between align-items-center">
+            <h2 class="text-white">Bag</h2>
+            <img src="images/categories/bag.png" alt="" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 ">
+          <div class="d-flex p-3 bg-warning rounded-3 justify-content-between align-items-center">
+            <h2 class="text-white">Shoes</h2>
+            <img src="images/categories/shoes.png" alt="" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Categories Section -->
   </header>
 
 
   <!-- End Header Section -->
+
+  <!-- Start Product Section -->
+  <section class="container">
+    <h2>Shoes</h2>
+
+    <!-- product -->
+
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$120</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$320</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Airmax</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$350</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Start Product Section -->
+  <section class="container">
+    <h2>Backpack</h2>
+
+    <!-- product -->
+
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Laltu Bag</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$120</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Blue Niltu Bag</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$320</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Balck Kaltu Bag</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3>$350</h3>
+            <div>
+              <button class="btn btn-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Product Section -->
   <!-- Bootstarp Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
