--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panda Ecommerce</title>
+  <!-- Add Favicon -->
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <!-- Bootstarpd StyleSheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,13 +49,13 @@
 
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shoes</a>
+              <a class="nav-link" href="#shoes">Shoes</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Backpack</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Subscribe</a></li>
+            <li class="nav-item"><a href="#backpack" class="nav-link">Backpack</a></li>
+            <li class="nav-item"><a href="#subscribe" class="nav-link">Subscribe</a></li>
           </ul>
         </div>
       </div>
@@ -63,7 +65,7 @@
 
     <!-- start Product Slider Section -->
 
-    <section class="container mt-5 rounded-3" style="background-color: #FCEAE8;">
+    <section class="container mt-5 rounded-3" style="background-color: #FCEAE8;" id="home">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -152,106 +154,129 @@
 
 
   <!-- End Header Section -->
+  <!-- Start Main  Section -->
+  <main>
 
-  <!-- Start Product Section -->
-  <section class="container">
-    <h2>Shoes</h2>
 
-    <!-- product -->
+    <!-- Start Product Section -->
+    <section class="container" id="shoes">
+      <h2>Shoes</h2>
 
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Supply 350</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$120</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
+      <!-- product -->
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$120</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
             </div>
-          </div>
 
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Nike 360</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$320</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
-            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Red Airmax</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$350</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$320</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-  <!-- Start Product Section -->
-  <section class="container">
-    <h2>Backpack</h2>
-
-    <!-- product -->
-
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Red Laltu Bag</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$120</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Blue Niltu Bag</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$320</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$350</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Balck Kaltu Bag</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h3>$350</h3>
-            <div>
-              <button class="btn btn-danger">Buy Now</button>
+    </section>
+    <!-- Start Product Section -->
+    <section class="container" id="backpack">
+      <h2>Backpack</h2>
+
+      <!-- product -->
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-5">
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$120</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$320</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow border-0 rounded-3">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Balck Kaltu Bag</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h3>$350</h3>
+              <div>
+                <button class="btn btn-danger">Buy Now</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- End Product Section -->
+    </section>
+    <!-- End Product Section -->
+    <!-- Start Subscribe Section -->
+
+    <section class="container d-flex justify-content-center p-5 rounded-3" style="background-color: #FCEAE8;">
+      <div class="subscribe col-md-6 ">
+        <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <input type="email" name="" id="" class="form-control" placeholder="Your Email">
+        <button class="btn mx-auto d-block mt-3 text-white" style="background-color:blueviolet;">SUBMIT</button>
+      </div>
+
+    </section>
+    <!-- End Subscribe Section -->
+  </main>
+  <!-- End Main Section -->
+
+  <!-- Add Footer -->
+
+  <footer class="mt-5">
+    <small class="text-center d-block">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+  </footer>
   <!-- Bootstarp Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
