Solve Some Issue

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <!-- End Product Section -->
     <!-- Start Subscribe Section -->
 
-    <section class="container d-flex justify-content-center p-5 rounded-3" style="background-color: #FCEAE8;">
+    <section class="container d-flex justify-content-center p-5 rounded-3" id="subscribe" style="background-color: #FCEAE8;">
       <div class="subscribe col-md-6 ">
         <h1>LET'S STAY IN TOUCH</h1>
         <p>Get updates on sales, specials and more</p>
